// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with correct styles 1`] = `
.circuit-0 {
  font-family: Montserrat,Helvetica,sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  font-size: 36px;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  background-image: linear-gradient(to right,#2b388f,#009bb8 51%,#02b0ed), linear-gradient(#2b388f,#2b388f);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

<h1
  className="circuit-0"
>
  hello world
</h1>
`;

exports[`renders with correct styles for H2 1`] = `
.circuit-0 {
  font-family: Montserrat,Helvetica,sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  color: #2b388f;
  font-size: 30px;
  line-height: 0.95;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  color: #2b388f;
  font-weight: 500;
}

<h2
  className="circuit-0"
>
  hello world
</h2>
`;
